# Midemine

./: .gitignore  Caddyfile  README.md  gen_secrets.py  pyproject.toml
cdm/: DESIGN.md  __init__.py  cdm.py  secure_display.py
content_platform/: config.py  content_server.py  deps.py  repos.py
key_server/: key_server.py
packager/: packager.py
player/: __main__.py  player.py
shared/: domain.py  utils.py
tests/: conftest.py  mocks.py  test_content_platform.py  test_e2e.py  test_key_server.py
